cambios en archivos

--- a/pagina_web/pagina/index.html
+++ b/pagina_web/pagina/index.html
@@ -6,14 +6,14 @@
     <title>Mi pagina de gatitos</title>
 </head>
 <body>
-    <h1>Concurso de gatos</h1>
-    <ol>
-    <li><img src="../img/1.jpg"></li>
-    <li><img src="../img/2.avif"></li>
-    <li><img src="../img/3.jpeg"></li>
-    <li><img src="../img/4.avif"></li>
-    <li><img src="../img/5.webp"></li>
+    <h1>Concurso mejores fotografias de gatitos</h1>
 
-</ol>
+    <a href="https://youtube.com">canal de youtube</a>
+    <img src="../img/1.jpg">
+    <img src="../img/2.avif">
+    <img src="../img/3.jpeg">
+    <img src="../img/4.avif">
+    <img src="../img/5.webp">
+
 </body>
 </html>
