--- a/pagina_web/pagina2/index2.html
+++ b/pagina_web/pagina2/index2.html
@@ -7,13 +7,14 @@
 </head>
 <body>
     <h1>Concurso de gatos</h1>
-    <a href="https://youtube.com">canal de youtube</a>
+    <a href="https://www.youtube.com/shorts/aIDFqgQvfCw"><h3>Video de gatos en youtube</h3></a>
     <ul>
     <li><img src="../img/1.jpg" width="500" height="500"></li>
     <li><img src="../img/2.avif" width="500" height="500"></li>
     <li><img src="../img/3.jpeg" width="500" height="500"></li>
     <li><img src="../img/4.avif" width="500" height="500"></li>
     <li><img src="../img/5.webp" width="500" height="500"></li>
+    
 
 </ul>
 </body>
